--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!--Menu de navegação-->
     <div class="navegacao">
-      <img src="img/logo-wiki.png" alt="" class="logo-wiki" />
+      <div class="box-logo-wiki"><img src="img/logo-wiki.png" alt="" class="logo-wiki" /></div>
 
       <nav class="menu">
         <ul>
